--- a/app/src/main/res/layout/activity_parking_info.xml
+++ b/app/src/main/res/layout/activity_parking_info.xml
@@ -1,125 +1,215 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ParkingInfoActivity"
-    android:orientation="vertical">
+    android:fillViewport="true">
 
-    <TextView
-        android:id="@+id/tv_name"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/main"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="name"
-        android:textSize="22dp"/>
+        android:layout_height="match_parent"
+        tools:context=".ParkingInfoActivity"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_parking"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="parking"
-        android:textSize="22dp"/>
+        <TextView
+            android:id="@+id/tv_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="name"
+            android:textSize="22dp"/>
 
-    <TextView
-        android:id="@+id/tv_access"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="access"
-        android:textSize="22dp"/>
+        <TextView
+            android:id="@+id/tv_parking"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="parking"
+            android:textSize="22dp"/>
 
-    <TextView
-        android:id="@+id/tv_capacity"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="capacity"
-        android:textSize="22dp"/>
+        <TextView
+            android:id="@+id/tv_access"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="access"
+            android:textSize="22dp"/>
 
-    <TextView
-        android:id="@+id/tv_capacitydis"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="capacityDisabled"
-        android:textSize="22dp"/>
+        <TextView
+            android:id="@+id/tv_capacity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="capacity"
+            android:textSize="22dp"/>
 
-    <TextView
-        android:id="@+id/tv_capacitytrucks"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="capacityTrucks"
-        android:textSize="22dp"/>
+        <TextView
+            android:id="@+id/tv_capacitydis"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="capacityDisabled"
+            android:textSize="22dp"/>
 
-    <TextView
-        android:id="@+id/tv_capacitybus"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="capacityBus"
-        android:textSize="22dp"/>
+        <TextView
+            android:id="@+id/tv_capacitytrucks"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="capacityTrucks"
+            android:textSize="22dp"/>
 
-    <TextView
-        android:id="@+id/tv_capacitymoto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="capacityMoto"
-        android:textSize="22dp"/>
+        <TextView
+            android:id="@+id/tv_capacitybus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="capacityBus"
+            android:textSize="22dp"/>
 
-    <TextView
-        android:id="@+id/tv_fee"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="fee"
-        android:textSize="22dp"/>
+        <TextView
+            android:id="@+id/tv_capacitymoto"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="capacityMoto"
+            android:textSize="22dp"/>
 
-    <TextView
-        android:id="@+id/tv_supervised"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="supervised"
-        android:textSize="22dp"/>
+        <TextView
+            android:id="@+id/tv_fee"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="fee"
+            android:textSize="22dp"/>
 
-    <TextView
-        android:id="@+id/tv_operator"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="operator"
-        android:textSize="22dp"/>
+        <TextView
+            android:id="@+id/tv_price"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="price"
+            android:textSize="22dp"/>
 
-    <Button
-        android:id="@+id/btn_edit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="EDYTUJ"/>
+        <TextView
+            android:id="@+id/tv_supervised"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="supervised"
+            android:textSize="22dp"/>
 
-    <TextView
-        android:id="@+id/tv_created"
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="edit_date"
-        android:textSize="22dp"/>
+        <TextView
+            android:id="@+id/tv_supervisedeins"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="supervised"
+            android:textSize="22dp"/>
 
-    <TextView
-        android:id="@+id/tv_date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="edit_date"
-        android:textSize="22dp"/>
+        <TextView
+            android:id="@+id/tv_supervisedmon"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="supervised"
+            android:textSize="22dp"
+            android:visibility="gone"/>
 
-    <TextView
-        android:id="@+id/tv_status"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="status"
-        android:textSize="22dp"/>
+        <TextView
+            android:id="@+id/tv_supervisedtue"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="supervised"
+            android:textSize="22dp"
+            android:visibility="gone"/>
 
-    <Button
-        android:id="@+id/btn_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="PRZEJRZYJ PROPONOWANE ZMIANY"
-        android:visibility="gone"/>
+        <TextView
+            android:id="@+id/tv_supervisedwed"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="supervised"
+            android:textSize="22dp"
+            android:visibility="gone"/>
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/tv_supervisedthu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="supervised"
+            android:textSize="22dp"
+            android:visibility="gone"/>
+
+        <TextView
+            android:id="@+id/tv_supervisedfri"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="supervised"
+            android:textSize="22dp"
+            android:visibility="gone"/>
+
+        <TextView
+            android:id="@+id/tv_supervisedsat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="supervised"
+            android:textSize="22dp"
+            android:visibility="gone"/>
+
+        <TextView
+            android:id="@+id/tv_supervisedsun"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="supervised"
+            android:textSize="22dp"
+            android:visibility="gone"/>
+
+        <TextView
+            android:id="@+id/tv_operator"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="operator"
+            android:textSize="22dp"/>
+
+        <Button
+            android:id="@+id/btn_edit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="EDYTUJ"/>
+
+        <TextView
+            android:id="@+id/tv_created"
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="edit_date"
+            android:textSize="22dp"/>
+
+        <TextView
+            android:id="@+id/tv_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="edit_date"
+            android:textSize="22dp"/>
+
+        <TextView
+            android:id="@+id/tv_status"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="status"
+            android:textSize="22dp"/>
+
+        <TextView
+            android:id="@+id/tv_user"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="user"
+            android:textSize="22dp"/>
+
+        <Button
+            android:id="@+id/btn_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="PRZEJRZYJ PROPONOWANE ZMIANY"
+            android:visibility="gone"/>
+
+        <Button
+            android:id="@+id/btn_hist"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="HISTORIA ZMIAN" />
+
+    </LinearLayout>
+</ScrollView>
