--- a/app/src/main/res/layout/activity_parking_info.xml
+++ b/app/src/main/res/layout/activity_parking_info.xml
@@ -201,8 +201,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="PRZEJRZYJ PROPONOWANE ZMIANY"
-            android:visibility="gone"/>
+            android:text="PRZEJRZYJ PROPONOWANE ZMIANY" />
 
         <Button
             android:id="@+id/btn_hist"
