Add chenges in admin panel activity

--- a/app/src/main/res/layout/activity_info_profile.xml
+++ b/app/src/main/res/layout/activity_info_profile.xml
@@ -50,6 +50,20 @@
         android:textSize="26dp"
         android:textAlignment="center"/>
 
+    <Spinner
+        android:id="@+id/spinner_access"
+        android:layout_height="50dp"
+        android:layout_width="280dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="10dp"
+        android:spinnerMode="dropdown"
+        android:background="@android:drawable/btn_dropdown"
+        android:theme="@style/ThemeOverlay.AppCompat.Light"
+        android:layout_marginTop="10dp"
+        android:entries="@array/ranga"
+        android:visibility="gone"/>
+
     <Button
         android:id="@+id/btn_guy"
         android:layout_width="match_parent"
@@ -73,6 +87,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Panel administratora"
+        android:visibility="gone"/>
+
+    <Button
+        android:id="@+id/btn_confirm"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Zatwierdź"
         android:visibility="gone"/>
 
 </LinearLayout>
