Add verifying parkings panel and show location of parking in history

--- a/app/src/main/res/layout/activity_verify_changes.xml
+++ b/app/src/main/res/layout/activity_verify_changes.xml
@@ -156,6 +156,13 @@
         android:textSize="22dp"/>
 
     <Button
+        android:id="@+id/btn_showonmap"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="POKAŻ NA MAPIE"/>
+
+    <Button
         android:id="@+id/btn_pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
