--- a/app/src/main/res/layout/activity_info_profile.xml
+++ b/app/src/main/res/layout/activity_info_profile.xml
@@ -90,6 +90,13 @@
         android:visibility="gone"/>
 
     <Button
+        android:id="@+id/btn_ver"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Panel weryfikacyjny"
+        android:visibility="gone"/>
+
+    <Button
         android:id="@+id/btn_confirm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
