--- a/app/src/main/res/layout/activity_verify_changes.xml
+++ b/app/src/main/res/layout/activity_verify_changes.xml
@@ -9,6 +9,13 @@
     android:orientation="vertical">
 
     <TextView
+        android:text="Zweryfikuj proponowane zmiany"
+        android:textAlignment="center"
+        android:textSize="26dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <TextView
         android:id="@+id/tv_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -85,67 +92,12 @@
         android:text="supervised"
         android:textSize="22dp"/>
 
-    <TextView
-        android:id="@+id/tv_supervisedeins"
+    <Button
+        android:id="@+id/btn_harm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="supervised"
-        android:textSize="22dp"/>
-
-    <TextView
-        android:id="@+id/tv_supervisedmon"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="supervised"
-        android:textSize="22dp"
-        android:visibility="gone"/>
-
-    <TextView
-        android:id="@+id/tv_supervisedtue"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="supervised"
-        android:textSize="22dp"
-        android:visibility="gone"/>
-
-    <TextView
-        android:id="@+id/tv_supervisedwed"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="supervised"
-        android:textSize="22dp"
-        android:visibility="gone"/>
-
-    <TextView
-        android:id="@+id/tv_supervisedthu"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="supervised"
-        android:textSize="22dp"
-        android:visibility="gone"/>
-
-    <TextView
-        android:id="@+id/tv_supervisedfri"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="supervised"
-        android:textSize="22dp"
-        android:visibility="gone"/>
-
-    <TextView
-        android:id="@+id/tv_supervisedsat"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="supervised"
-        android:textSize="22dp"
-        android:visibility="gone"/>
-
-    <TextView
-        android:id="@+id/tv_supervisedsun"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="supervised"
-        android:textSize="22dp"
+        android:layout_marginTop="10dp"
+        android:text="WYŚWIETL HARMONOGRAM"
         android:visibility="gone"/>
 
     <TextView
