--- a/app/src/main/res/layout/activity_guy.xml
+++ b/app/src/main/res/layout/activity_guy.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="26dp"
-        android:text="Dane osobowe"
+        android:text="Edytuj dane osobowe"
         android:textAlignment="center"/>
 
     <EditText
