--- a/app/src/main/res/layout/activity_info_profile.xml
+++ b/app/src/main/res/layout/activity_info_profile.xml
@@ -9,6 +9,13 @@
     android:orientation="vertical">
 
     <TextView
+        android:text="Informacje dotyczące konta"
+        android:textAlignment="center"
+        android:textSize="26dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <TextView
         android:id="@+id/tv_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
