--- a/app/src/main/res/layout/activity_parking_booking.xml
+++ b/app/src/main/res/layout/activity_parking_booking.xml
@@ -9,6 +9,13 @@
     android:orientation="vertical">
 
     <TextView
+        android:text="Rezerwacja miejsca parkingowego"
+        android:textAlignment="center"
+        android:textSize="26dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <TextView
         android:id="@+id/places"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
