--- a/app/src/main/res/layout/activity_parking_edit_history.xml
+++ b/app/src/main/res/layout/activity_parking_edit_history.xml
@@ -6,7 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:context=".ParkingEditHistoryActivity"
-    android:orientation="horizontal">
+    android:orientation="vertical">
+
+    <TextView
+        android:text="Lista użytkowników"
+        android:textAlignment="center"
+        android:textSize="26dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
