--- a/app/src/main/res/layout/activity_password_change.xml
+++ b/app/src/main/res/layout/activity_password_change.xml
@@ -8,6 +8,13 @@
     tools:context=".PasswordChangeActivity"
     android:orientation="vertical">
 
+    <TextView
+        android:text="Zmiana hasła"
+        android:textAlignment="center"
+        android:textSize="26dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <EditText
         android:id="@+id/et_email"
         android:layout_width="match_parent"
