--- a/app/src/main/res/layout/activity_remind_password.xml
+++ b/app/src/main/res/layout/activity_remind_password.xml
@@ -8,6 +8,13 @@
     android:layout_height="match_parent"
     tools:context=".RemindPasswordActivity">
 
+    <TextView
+        android:text="Przypomnienie hasła"
+        android:textAlignment="center"
+        android:textSize="26dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <EditText
         android:id="@+id/et_email"
         android:layout_width="match_parent"
