--- a/app/src/main/res/layout/activity_ticket.xml
+++ b/app/src/main/res/layout/activity_ticket.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:textSize="20dp"
         android:textAlignment="center"
-        android:text="Bilet na parking"/>
+        android:text="Przegląd rezerwacji"/>
 
     <ImageView
         android:id="@+id/imageCode"
@@ -38,7 +38,7 @@
         android:textSize="20dp"
         android:textAlignment="center"
         android:layout_marginTop="10dp"
-        android:text="Bilet ważny na godzinę parkowania"/>
+        android:text="Valid thru"/>
 
     <Button
         android:id="@+id/btn_back"
