--- a/app/src/main/res/layout/activity_parking_info.xml
+++ b/app/src/main/res/layout/activity_parking_info.xml
@@ -127,7 +127,14 @@
             android:textSize="22dp"/>
 
         <TextView
-            android:id="@+id/tv_date"
+            android:id="@+id/tv_edited"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="edit_date"
+            android:textSize="22dp"/>
+
+        <TextView
+            android:id="@+id/tv_verified"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="edit_date"
