--- a/app/src/main/res/layout/activity_parking_info.xml
+++ b/app/src/main/res/layout/activity_parking_info.xml
@@ -154,6 +154,13 @@
             android:text="user"
             android:textSize="22dp"/>
 
+        <TextView
+            android:id="@+id/tv_ver"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="user"
+            android:textSize="22dp"/>
+
         <Button
             android:id="@+id/btn_hist"
             android:layout_width="match_parent"
