--- a/app/src/main/res/layout/activity_parking_edit_history.xml
+++ b/app/src/main/res/layout/activity_parking_edit_history.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:text="Lista użytkowników"
+        android:text="Historia edycji"
         android:textAlignment="center"
         android:textSize="26dp"
         android:layout_width="match_parent"
