--- a/app/src/main/res/layout/single_parking_history.xml
+++ b/app/src/main/res/layout/single_parking_history.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/tv_name"
+        android:id="@+id/tv_action"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="26dp"/>
@@ -18,6 +18,18 @@
 
     <TextView
         android:id="@+id/tv_dataEdited"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="26dp"/>
+
+    <TextView
+        android:id="@+id/tv_user"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="26dp"/>
+
+    <TextView
+        android:id="@+id/tv_adres"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="26dp"/>
