--- a/app/src/main/res/layout/single_verify.xml
+++ b/app/src/main/res/layout/single_verify.xml
@@ -22,4 +22,16 @@
         android:layout_height="wrap_content"
         android:textSize="26dp"/>
 
+    <TextView
+        android:id="@+id/tv_user"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="26dp"/>
+
+    <TextView
+        android:id="@+id/tv_adres"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="26dp"/>
+
 </LinearLayout>
