--- a/app/src/main/res/layout/single_parking.xml
+++ b/app/src/main/res/layout/single_parking.xml
@@ -9,39 +9,34 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="26dp"
-        android:textAlignment="center"
-        android:text="lol"/>
+        android:textAlignment="center" />
 
     <TextView
         android:id="@+id/adres"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="26dp"
-        android:textAlignment="center"
-        android:text="lol"/>
+        android:textAlignment="center" />
 
     <TextView
         android:id="@+id/status_edyt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="26dp"
-        android:textAlignment="center"
-        android:text="lol"/>
+        android:textAlignment="center" />
 
     <TextView
         android:id="@+id/status_weryf"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="26dp"
-        android:textAlignment="center"
-        android:text="lol"/>
+        android:textAlignment="center" />
 
     <TextView
         android:id="@+id/data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="26dp"
-        android:textAlignment="center"
-        android:text="lol"/>
+        android:textAlignment="center" />
 
 </LinearLayout>
