Fix adapters, create find parkings fragment and fix some bugs

--- a/app/src/main/res/layout/activity_parking_info.xml
+++ b/app/src/main/res/layout/activity_parking_info.xml
@@ -168,5 +168,12 @@
             android:layout_marginTop="10dp"
             android:text="HISTORIA ZMIAN" />
 
+        <Button
+            android:id="@+id/btn_delete"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="USUŃ PARKING" />
+
     </LinearLayout>
 </ScrollView>
